[gd_scene load_steps=14 format=3 uid="uid://dgbsgeq2b63o1"]

[ext_resource type="Texture2D" uid="uid://c6ee5wledx871" path="res://Game (movements, npcs, world map, inventory)/Assets/NPCs/Customer Male/idle_left_c3-Sheet.png" id="1_7t3d5"]
[ext_resource type="Script" uid="uid://bqgdw38pitmik" path="res://Game (movements, npcs, world map, inventory)/Scripts/npc.gd" id="1_cxb8g"]
[ext_resource type="Resource" uid="uid://dn7rcr42bbmsd" path="res://Datas/Resources/Customer/male.tres" id="2_oq4kr"]
[ext_resource type="PackedScene" uid="uid://cxbmbqwvjgd0b" path="res://Kiosk (restaurant)/Scenes/Npc/dialogue.tscn" id="3_h6h62"]
[ext_resource type="PackedScene" uid="uid://mfisgq68y4y1" path="res://Kiosk (restaurant)/Scenes/Npc/start_conversation.tscn" id="4_oq4kr"]
[ext_resource type="PackedScene" uid="uid://drj4vdkghmx5k" path="res://Kiosk (restaurant)/Scenes/Npc/thought_bubble_scene.tscn" id="6_1c5ll"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cxb8g"]
atlas = ExtResource("1_7t3d5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31iww"]
atlas = ExtResource("1_7t3d5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6h62"]
atlas = ExtResource("1_7t3d5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oq4kr"]
atlas = ExtResource("1_7t3d5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1c5ll"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxb8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31iww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6h62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oq4kr")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8yqrm"]
size = Vector2(6.5, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_31iww"]
size = Vector2(42, 24)

[node name="customer_male" type="CharacterBody2D"]
script = ExtResource("1_cxb8g")
customer = ExtResource("2_oq4kr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1c5ll")
animation = &"idle_left"
frame_progress = 0.956865

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.25, 11)
shape = SubResource("RectangleShape2D_8yqrm")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-11, 4)
shape = SubResource("RectangleShape2D_31iww")

[node name="Dialogue" parent="." instance=ExtResource("3_h6h62")]
unique_name_in_owner = true
visible = false
offset_top = 11.0
offset_bottom = 11.0

[node name="StartConversation" parent="." instance=ExtResource("4_oq4kr")]
visible = false
offset_left = -47.0
offset_top = -24.0
offset_right = 48.57
offset_bottom = -4.99998

[node name="ThoughtBubbleScene" parent="." instance=ExtResource("6_1c5ll")]
visible = false
offset_left = -35.0
offset_top = -36.0
offset_right = -35.0
offset_bottom = -36.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
